--- a/src/components/DuelsPage.css
+++ b/src/components/DuelsPage.css
@@ -3,6 +3,10 @@
 .duels-page {
   display: flex;
   flex-direction: column;
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 10.5%;
+  box-sizing: border-box;
 }
 
 .duel-category-section {
