--- a/src/components/SessionHistoryPage.css
+++ b/src/components/SessionHistoryPage.css
@@ -2,11 +2,10 @@
   display: flex;
   flex-direction: column;
   height: 100%;
-  /* Break out of parent container constraints for full-width layout */
-  margin-left: calc(-1 * var(--app-padding, 0.75rem));
-  margin-right: calc(-1 * var(--app-padding, 0.75rem));
-  padding-left: var(--app-padding, 0.75rem);
-  padding-right: var(--app-padding, 0.75rem);
+  width: 100%;
+  margin: 0 auto;
+  padding: 0 10.5%;
+  box-sizing: border-box;
   max-width: none !important; /* Override any parent max-width constraints */
 }
 
